v 5.1.0
  - Added rugged dependency
  - Git::Tag and Git::Branch objects

v 5.0.0
  - Use new version of linguist

v 4.1.0
  - Allow to specify diff paths
  - Remove pygments dependency

v 4.0.0
  - use activesupport v4
  - Add support for raw blob search
  - Add support for zip archives

v 3.1.0
  - use gitlab dependencies (linguist, pygments)

v 3.0.0
  - Refactor Git::Tree
  - Refactor Git::Blob
  - Refactored Git::Repository

v 2.3.0
  - Better ref detection
  - Fixed empty repo bug

v 2.2.0
 - Fixed Compare showing wrong diff 

v 1.4.0
  - Update gitlab_grit dependency to 2.6.0

v 1.3.0
  - Added GitStats and LogParser classes

v 1.2.1
  - fixed commit stats

v 1.2.0
  - Use gitlab-grit instead of grit
  - removed grit_ext dependency also

v 1.1.0
  - new method Repository#search_files added
  - new class BlobSnippet added (for search results)

v 1.0.6
  - new method Tree#submodules added