@@ -92,4 +92,3 @@ module Gitlab
     end
   end
 end
-
